# MCKO

./: .env.example  Cargo.toml  README.md
assets/: app.css
scripts/: start_server.sh  stop_server.sh
src/: app.rs  app_config.rs  app_state.rs  main.rs  script_util.rs  status_monitor.rs  template.rs
templates/: base.html  index.html  status_box.html
