[package]
name = "mcko"
authors = ["Pcko"]
description="Small Webservice to start a Minecraft server from remote." 
version = "0.1.0"
edition = "2024"
default-run = "mcko"

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs","trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
argon2 = "0.5.3"
tower_governor = "0.8.0"